--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Data Journalism D3js</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.13.0/d3.min.js"></script>
-  
+  <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.13.0/d3.min.js"></script> 
 </head>
 <body>
-  <div class="container  data_header">  </div>
+  <div class="container data_header">  </div>
   <div class="text-center">
     <h1>Health Watch: Current Trends That Shape Our Lives</h1>
   </div>
@@ -18,4 +19,6 @@
     <iframe src="d3.html" frameborder="0" width="100%" height="800"></iframe>
   </div>
 </body>
+<footer>
+</footer>
 </html>
